# spit.sh

./: .gitignore  README.md
.github/workflows/: python-app.yml
be/: .dockerignore  README.md  crud.py  database.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
be/config/: authentication.py  environment.py
be/crud/: click.py  link.py  project.py  session.py  user.py
be/migrations/: env.py
be/migrations/versions/: 0b1fa044fb43_migrate_again.py  6636fd58763a_init.py  66ea35490d30_hashed_otp_in_schema.py  a1b2c3d4e5f6_link_management.py
be/models/: base.py  linkModel.py  projectModel.py  urlModel.py  userModel.py
be/routers/: authRouter.py  linkRouter.py  projectRouter.py  userRouter.py
be/schemas/: authSchema.py  clickSchema.py  linkSchema.py  projectSchema.py  userSchema.py
be/services/: link_service.py
be/utils/: auth_handlers.py  config.py  email.py  generate.py  jwt_auth.py  limiter.py
docs/: CLAUDE.md
fe/: .eslintcache  package-lock.json  package.json  workbox-config.js
fe/public/: index.html  manifest.json
fe/src/: App.css  App.js  index.css  sw-build.js  sw-template.js
frontend/: middleware.ts  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  not-found.tsx
frontend/components/: DashboardHomeNavbar.tsx
frontend/hooks/: useClipboard.ts  useCreateLink.ts  useOnboarding.ts  useProjectLinks.ts  useToast.ts
frontend/layouts/: AuthLayout.tsx  DashboardLayout.tsx  Footer.tsx  MainLayout.tsx  Navbar.tsx
frontend/lib/: auth-check.ts  (+4 more)
(+84 files in other folders)
